# artnet-bridge

./: Cargo.toml  README.md
.github/workflows/: rust-build-test-release.yml
examples/: config.json  kinet_dissector.lua
src/: config.rs  kinet.rs  main.rs  utils.rs
