[package]
name = "artnet-bridge"
version = "0.1.0"
authors = ["Michael Dewberry <michael.dewberry@gmail>"]
edition = "2018"
description = "ArtNet-Kinet Bridge"
license = "GPLv3"
documentation = "https://docs.rs/artnet_bridge"
repository = "https://github.com/dewb/artnet_bridge"

[dependencies]
structopt = "0.3.13"
clap-verbosity-flag = "0.3.1"
log = "0.4"
pretty_env_logger = "0.4.0"
artnet_protocol = "0.2.0"
bincode = "1.2.1"
serde =  { version = "1.0", features = ["derive"] }